test/fails/bad_tags/assign4.lgl
tag a is vec<2>;
tag b is vec<3>;

void main() {
    a->b x = [[1., 1., 1.], [1., 1., 1.]]; // Reversed order
}